syntax = "proto3";
package auth;


service Auth {
    rpc basic (basicCreds) returns (authResult) {}
}

service User {
    rpc createUser(user) returns (user);
    rpc chageUser(user) returns (user);
    rpc getUser(userInput) returns (user);
    rpc deleteUser(userInput) returns (result);
    rpc getAllUsers(user) returns (userlist);
}

message result {
    bool success = 1;
}

message userlist {
    repeated user users = 1;
}


message userInput {
    string username = 1;
}

message user {
    string username = 1;
    string email = 2;
    string firstname = 3;
    string lastname = 4;
    string dob = 5;
    string joindate = 6;
    int32 consumption = 7;
    string logmech = 8;
}

message basicCreds {
    string username = 1;
    string password = 2;
}

message authResult {
    bool success = 4;
    string token = 3;
}